# report_generator

./: README.md  example.ipynb  generated_report.pptx  pyproject.toml  report.pptx  report_data.json  report_generate.py  style_config.json  test_generate.py
data/: table1.csv  table1.xlsx
src/report_generator/: image_slide.py  mixed_slide.py  pptx_exporter.py  slide_builder.py  table_slide.py  text_slide.py  title_slide.py
src/report_generator/utils/: geometry.py  pdf_converter.py  placeholder_utils.py  table_config.py  table_loader.py  text_config.py  text_style.py  units.py
templates/: example_template.pptx  example_template1.pptx  example_template2.pptx
